# avail-prover-demo

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
app/: auth_test.txt  fees.txt  helper.txt  multi_txn_t1.txt  sample_auth.txt  secp.pub  test_hello.txt
bindings/src/: ecdsa.rs
enclave-setup/: Dockerfile  README.md  build.sh  checkInput.txt  credits.txt  keygen  makefile  oyster-keygen  refreshEnclave.sh  setup.sh  supervisord.conf
src/: handler.rs  main.rs  model.rs  prover.rs  response.rs  server.rs
